<?xml version="1.0"?>
<package>
  <name>robocup_simopl_handyman</name>
  <version>0.0.0</version>
  <description>this package is robocup_simopl_handyman</description>

  <maintainer email="yuujibuu@gmail.com">Yujibuu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sobit_navigation_library</build_depend>

  <run_depend>sobit_navigation_library</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>object_recog</run_depend>

</package>
